--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "expo": "~52.0.6",
+    "expo-device": "~7.0.1",
+    "expo-notifications": "^0.29.7",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.1"
